My first web page.

--- a/site/index.html
+++ b/site/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>HUMCOM1</h1>
         <h3>by: J. Villena</h3>
+        <h2>This is a ample web page</h2>
     </body>
 </html>
