--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Setting Up my Site</title>
+        <title>My Homepage</title>
     </head>
     <body>
         <h1>HUMCOM1</h1>
         <h3>by: J. Villena</h3>
-        <h2>This is a sample web page</h2>
+        <h2>This is my first web page</h2>
     </body>
 </html>
