--- a/site/FirstGrading/Exercise1.html
+++ b/site/FirstGrading/Exercise1.html
@@ -9,7 +9,7 @@
     <body bgcolor=#EB984E>
         <font face='Courier' size='4pt' color='#17202A'><center><h1>My Favorite Book:<b><u>"OUTBREAK"</u></b></h1></center></font>
         <h2><center><u>Chris Ryan</u></center></h2>
-        <font face='Century Gothic' size='3pt' color='black'>
+        <font face='Century Gothic' size='3pt' color='#061425'>
             <p><font color='red'><i><b>Thirteen-year-old</b></i></font> <u>Ben Tracey</u> is looking <font color='red'><i><b>forward</b></i></font> to spending the summer in the Democratic Republic of Congo, 
             where his father has been hired to examine the <font color='red'><i><b>valuable</b></i></font> mineral Coltan that's being <font color='red'><i><b>mined</b></i></font> there. 
             They <font color='red'><i><b>soon</b></i></font> realise that the people living in the village <font color='red'><i><b>near</b></i></font> the mine are <font color='red'><i><b>frightened</b></i></font> 
