--- a/site/FirstGrading/Exercise2.html
+++ b/site/FirstGrading/Exercise2.html
@@ -4,18 +4,42 @@
         <meta charset="utf-8" />
         <meta name="author" content="J.Villena" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Div and Span Elements</title>
+        <title>Jhazel Villena - Resume</title>
     </head>
-    <body>
-        <h1>Div and Span Elements</h1>
-        <div>*** DIV 1: Some content here *** </div>
-        <div>*** DIV 2: Following right after div 1 ***</div>
-
-        <span>*** SPAN 1: Following right after div 2***</span>
-        <div>
-            *** DIV 3: Following right after span 1
-                <span>*** SPAN 2: INSIDE div 3 ***</span>
-                Continue content of div 3 ***
-        </div>
-    </body>
+    <font face='Tahoma' size='2pt'>
+        <body bgcolor="#E8DAEF">
+            <font face='Courier New' size='3pt' color='#5499C7'>
+                <h1><center>Jhazel Villena</center></h1> 
+                <h3>OBJECTIVE</h3>
+            </font> 
+        <p>
+           <li>To enhance my leadership skills and empower myself as role model to younger generation.</li>
+           <li>To experience the reality of what technology does in our daily life.</li>
+           <li>To have a prior knowledge about what it takes being a computer technician.</li>
+        </p>
+        <font face='Courier New' size='3pt' color='#5499C7'>
+            <h3>EDUCATIONAL BACKGROUND</h3>
+        </font> 
+        <ul>
+        <dt><i>2020-08 - 2024-05</i><font color='#5499C7'><b> University of Baguio</b></font></dt>
+        <dd>Graduate</dd>
+        </ul>
+        <ul>
+        <dt><i>2014-06 - 2020-03</i><font color='#5499C7'><b> BNHS Annex-Alno</b></font></dt>
+        <dd>Leadership Award</dd>
+        <dd>Best Performance in Work Immersion</dd>
+        <dd>News writer</dd>
+        <dd>Roverette & Cadet</dd>
+        </ul>
+        <ul>
+        <dt><i>2007-06 - 2014-03</i><font color='#5499C7'><b> DPES (formerly: ACDES)</b></font></dt>
+        <dd>Achiever Award</dd>
+        <dd>Journalist</dd>
+        </ul>
+        <ul>
+        <dt><i>2005-06 - 2007-03</i><font color='#5499C7'><b> Ettong Day Care Center</b></font></dt>
+        <dd>Most Behave</dd>
+        </ul>
+        </body>
+    </font>
 </html>
