--- a/site/FirstGrading/Exercise3.html
+++ b/site/FirstGrading/Exercise3.html
@@ -4,18 +4,42 @@
         <meta charset="utf-8" />
         <meta name="author" content="J.Villena" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Div and Span Elements</title>
+        <title>How?</title>
     </head>
-    <body>
-        <h1>Div and Span Elements</h1>
-        <div>*** DIV 1: Some content here *** </div>
-        <div>*** DIV 2: Following right after div 1 ***</div>
-
-        <span>*** SPAN 1: Following right after div 2***</span>
-        <div>
-            *** DIV 3: Following right after span 1
-                <span>*** SPAN 2: INSIDE div 3 ***</span>
-                Continue content of div 3 ***
-        </div>
+    <font face='Courier New' size='2pt'>
+    <body bgcolor='#5499C7'>
+        <h1>How to make Rice Wine "Tapey"</h1>
+       <ol>
+        <h2><li>Prepare these Materials & Ingreidents</li></h2>
+            <ul>
+            <li>Pot</li>
+            <li>Fress banana leaves</li>
+            <li>Elastic rope</li>
+            <li>Rice</li>
+            <li>"Bubud"</li>
+            <dd>It is a small dried white circle that contains fermented rice mixed with cassava</dd>
+            <li>Water</li>
+            </ul>
+        <h2><li>Put the rice (any kind of ordinary rice) in the pot (must have a cover).</li></h2>
+        <h2><li>Add "bubud" to the rice in the pot with a ratio of 2 kilos rice=1 "bubud".</li></h2>
+        <ul><li>Don't crack the "bubud" or powderize because it will not make the rice wine taste good.</li></ul>
+        <h2><li>Cover the pot with fresh banana leaves.</li></h2>
+        <h2><li>Tie the leaves using the elastic rope around the pot's neck.</li></h2>
+            <ul>
+                <li>Make sure air does not come into the pot.</li>
+            </ul>
+            <h2><li>Cover the pot with it's cover and store in a dry place.</li></h2>
+            <h2><li>Wait for a month for the rice to be fermented.</li></h2>
+            <ul>
+                <li>If you want to have a stronger wine to make you drunk, just store it for 2-3 days.</li>
+            </ul>
+            <h2><li>After that you will open the pot and your "Tapey" is ready to drink.</li></h2>
+            <ul>
+                <li>Usually, others add sugar to it if you want the wine to be more sweet.</li>
+            </ul>
+        </ol>
+        <h2><center>Have Fun!</center></h2>
+        <h3>by: Jhazel Villena</h3>
     </body>
+    </font>
 </html>
