--- a/site/FirstGrading/Exercise2.html
+++ b/site/FirstGrading/Exercise2.html
@@ -39,6 +39,7 @@
         <ul>
         <dt><i>2005-06 - 2007-03</i><font color='#5499C7'><b> Ettong Day Care Center</b></font></dt>
         <dd>Most Behave</dd>
+            <dd>Best in Art</dd>
         </ul>
         </body>
     </font>
