--- a/site/FirstGrading/Exercise4.html
+++ b/site/FirstGrading/Exercise4.html
@@ -4,18 +4,36 @@
         <meta charset="utf-8" />
         <meta name="author" content="J.Villena" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Div and Span Elements</title>
+        <title>Who is the Holy Spirit?</title>
     </head>
     <body>
-        <h1>Div and Span Elements</h1>
-        <div>*** DIV 1: Some content here *** </div>
-        <div>*** DIV 2: Following right after div 1 ***</div>
-
-        <span>*** SPAN 1: Following right after div 2***</span>
-        <div>
-            *** DIV 3: Following right after span 1
-                <span>*** SPAN 2: INSIDE div 3 ***</span>
-                Continue content of div 3 ***
-        </div>
+        <header>
+            <h1>Holy Spirit</h1>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact us</a></li>
+                </ul>
+        </header>
+        <nav>
+            <a href="">HTML</a>
+            <a href="">CSS</a>
+            <a href="">JavaScript</a>
+            <a href="">jQuery</a>
+        </nav>
+        <section>
+            <h3></h3>
+            <article>
+                <figure>
+                    <img>
+                    <figcaption></figcaption>
+                </figure>
+            </article>
+            <h3></h3>
+            <article>
+                <p></p>
+            </article>
+        </section>
+        <footer></footer>
     </body>
 </html>
