--- a/site/index.html
+++ b/site/index.html
@@ -4,8 +4,8 @@
         <title>My Homepage</title>
     </head>
     <body>
-        <h1>HUMCOM1</h1>
-        <h3>by: J. Villena</h3>
-        <h2>This is my first web page</h2>
+        <h1>HUMCOM1 - Site Directory</h1>
+        <h2></h2>JHA
+        <h2>^_^</h2>
     </body>
 </html>
