--- a/site/FirstGrading/Exercise4.html
+++ b/site/FirstGrading/Exercise4.html
@@ -16,10 +16,10 @@
                 </ul>
         </header>
         <nav>
-            <a href="">HTML</a>
-            <a href="">CSS</a>
-            <a href="">JavaScript</a>
-            <a href="">jQuery</a>
+            <a href="#definition">Definition and Classifictaion</a>
+            <a href="#history">Histpry</a>
+            <a href="production">JavaScript</a>
+            <a href="  ">jQuery</a>
         </nav>
         <section>
             <h3></h3>
