--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>HUMCOM1 - Site Directory</h1>
-        <h2></h2>JHA
+        <h2>JHAZEL B. VILLENA</h2>
         <h2>^_^</h2>
     </body>
 </html>
