--- a/site/FirstGrading/Exercise4.html
+++ b/site/FirstGrading/Exercise4.html
@@ -8,32 +8,86 @@
     </head>
     <body>
         <header>
-            <h1>Holy Spirit</h1>
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact us</a></li>
-                </ul>
+            <h1>Holy Spirit</h1>   
         </header>
         <nav>
-            <a href="#definition">Definition and Classifictaion</a>
-            <a href="#history">Histpry</a>
-            <a href="production">JavaScript</a>
-            <a href="  ">jQuery</a>
+            <ul>
+                <li><a href="#definition">Definition and Classification</a></li>
+                <li><a href="#history">Origin of the Holy Spirit</a></li>
+                <li><a href="#empower">10 Supernatural Ways He Empowers You</a></li>
+                <li><a href="#references">References</a></li>
+            </ul>
         </nav>
-        <section>
-            <h3></h3>
+        <main>
+            <p>“The <b>Holy Spirit</b> illuminates the minds of people, 
+                makes us yearn for God, and takes spiritual truth and 
+                makes it understandable to us.” –Billy Graham</p>
+            <p>The <b>Holy Spirit</b> is a beautiful and powerful part of 
+                who God is. We need Him in our life as a conduit to 
+                become who God created us to be, and through His power
+                 we have aid in all situations. Without Him, we are powerless.</p>
+        <section id="definition">
+            <h2>Definition and Classification</h2>
             <article>
-                <figure>
-                    <img>
-                    <figcaption></figcaption>
-                </figure>
-            </article>
-            <h3></h3>
-            <article>
-                <p></p>
+                <p>The third person of the Trinity.The definition of the 
+                Holy Spirit is God's continued presence on Earth and
+                the Third Person of the Holy Trinity.</p>
+                <p>Our first encounter with the Holy Spirit is when 
+                He convicts us of our sin, shows us that none of us can live up to 
+                the righteousness of Jesus, and reveals to us the judgment that is 
+                coming to those who die without a Savior (John 16:8-11). As we repent, 
+                confess our sins and receive the gift of Salvation the Holy Spirit regenerates
+                our dead inner human spirit which now becomes sensitive to the spiritual things of
+                God (John 3:1-16; Acts 2:38).</p>
+                <P>There is a second work of the Holy Spirit when He baptizes a believer (Acts 2:1-4).
+                It's available to all (Acts 2:39) and a gift of empowerment, helping the believer to live a holy life. 
+                Through the power of the Holy Spirit, the Helper, we become more like Jesus and are directed to do the Father's will.
+                Furthermore, the gift is primarily for the empowerment to witness to others (Acts 1:8).</P>
+                <p>We are encouraged to ask the Holy Spirit to fill us up on a regular basis. 
+                When you feel depleted or need strength, ask Him to replenish you (Ephesians 5:18).</p>
             </article>
         </section>
-        <footer></footer>
+        <section id="history">
+            <h2>Origin of the Holy Spirit</h2>
+            <article>
+                <p>The idea of “procession” or “coming forth” in the inner divine life has its basis in a number of Scriptural texts. Jesus says of himself in John 8 (42), “For I proceeded and came forth from God”; and he says of the Spirit that he “proceeds from the Father” (Jn 15:26). In these texts Jesus is speaking not only of the external manifestations of the Spirit and his own Incarnation in time and space, but he is also referring to the internal, external origin of himself and the Holy Spirit.</p>
+                <p>By “procession” is understood the origin of one from another. When we speak of an internal, divine procession, we mean the origin of one divine Person from another through the communication of the numerically one divine essence. It is to be remembered that it is not the divine essence or substance that proceeds; rather, the Second Person (Son) proceeds from the originless Father and the Third Person (Holy Spirit) proceeds from the Father and the Son as from one principle. For, the Second Council of Lyons (1274) defined as dogma of faith that the Holy Spirit proceeds from the Father and the Son, not as from two principles, but as from one principle.</p>
+            </article>
+        </section>
+        <section id="empower">
+            <h2>10 Supernatural Ways He Empowers You</h2>
+            <article>
+            <ol>
+                <li>The Holy Spirit is your Helper.</li>
+                <dd>“Nevertheless, I tell you the truth: it is to your advantage that I go away, for if I do not go away, the Helper will not come to you. But if I go, I will send him to you,”  John 16:7.</dd>
+                <li>The Holy Spirit sanctifies you.</li>
+                <dd>“But you were washed, you were sanctified, you were justified in the name of the Lord Jesus Christ and by the Spirit of our God,” 1 Corinthians 6:11.</dd>
+                <li>He makes you more like Christ.</li>
+                <dd>“And we all, who with unveiled faces contemplate the Lord’s glory, are being transformed into his image with ever-increasing glory, which comes from the Lord, who is the Spirit,” 2 Corinthians 3:18.</dd>
+                <li>He helps you to do the Father’s will.</li>
+                <dd>“Then the Spirit said to Philip, ‘Go up and join this chariot,’"  Acts 8:29.</dd>
+                <li>The Holy Spirit gifts you for ministry.</li>
+                <dd>“There are different kinds of spiritual gifts, but the same Spirit is the source of them all. There are different kinds of service, but we serve the same Lord. God works in different ways, but it is the same God who does the work in all of us. A spiritual gift is given to each of us so we can help each other. To one person the Spirit gives the ability to give wise advice; to another the same Spirit gives a message of special knowledge. The same Spirit gives great faith to another, and to someone else the one Spirit gives the gift of healing. He gives one person the power to perform miracles, and another the ability to prophesy. He gives someone else the ability to discern whether a message is from the Spirit of God or from another spirit. Still another person is given the ability to speak in unknown languages, while another is given the ability to interpret what is being said. It is the one and only Spirit who distributes all these gifts. He alone decides which gift each person should have,” 1 Corinthians 12:4-11.</dd>
+                <li>He imparts love.</li>
+                <dd>“Not only that, but we rejoice in our sufferings, knowing that suffering produces endurance, and endurance produces character, and character produces hope, and hope does not put us to shame, because God's love has been poured into our hearts through the Holy Spirit who has been given to us,”  Romans 5:3-5.</dd>
+                <li>The Holy Spirit gives hope.</li>
+                <dd>“May the God of hope fill you with all joy and peace in believing, so that by the power of the Holy Spirit you may abound in hope,”  Romans 15:13.</dd>
+                <li>The Holy Spirit teaches and gives insight.</li>
+                <dd>“But the Helper, the Holy Spirit, whom the Father will send in my name, he will teach you all things and bring to your remembrance all that I have said to you,”  John 14:26.</dd>
+                <li>The Holy Spirit guides your prayers.</li>
+                <dd>“Likewise the Spirit helps us in our weakness. For we do not know what to pray for as we ought, but the Spirit himself intercedes for us with groanings too deep for words,” Romans 8:26.</dd>
+                <li>He uses you for evangelism.</li>
+                <dd>“But you will receive power when the Holy Spirit has come upon you, and you will be my witnesses in Jerusalem and in all Judea and Samaria, and to the end of the earth,”  Acts 1:8.</dd>
+            </ol>
+            </article>
+        </section>
+        <section id="references">
+            <h2>References</h2>
+            <footer>
+                <ol>
+                    <li> <a href="https://www.catholiceducation.org/en/culture/catholic-contributions/the-origin-of-the-holy-spirit.html">Origin of the Holy Spirit</a></li>
+                    <li> <a href="https://www.crosswalk.com/faith/spiritual-life/10-supernatural-ways-the-holy-spirit-wants-to-empower-you.html">Spiritual Life</a></li>                  
+                </ol>
+        </section>
     </body>
 </html>
