--- a/site/FirstGrading/Exercise4.html
+++ b/site/FirstGrading/Exercise4.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="author" content="J.Villena" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Who is the Holy Spirit?</title>
+        <title>Semantic Wiki</title>
     </head>
     <body>
         <header>
