--- a/site/FirstGrading/Exercise5.html
+++ b/site/FirstGrading/Exercise5.html
@@ -1,38 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Table</title>
         <meta charset="utf-8" />
         <meta name="author" content="J.Villena" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Table</title>
     </head>
-    <body>
-        <h3>The Siblings</h3>
-        <table width='300px' border='2pt' bgcolor=''>
-            <thread>
-                <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Age</th>
-                </tr>
-            </thread>
+    <body bgcolor='#515A5A'>
+        <h3>Table A: My Favorite Foods</h3>
+        <table width='300px' border='2pt'>
             <tbody>
                 <tr>
-                    <td>Jhenil</td>
-                    <td>Villena</td>
-                    <td>23</td>    
-                </tr>
-                <tr>
-                    <td>Jhevies</td>
-                    <td>Villena</td>
-                    <td>21</td>
-                </tr>
-                <tr>
-                    <td>Jhazel</td>
-                    <td>Villena</td>
-                    <td>20</td>
+                    <th>1 sandwich</th>
+                    <th>2 ripe mango</th>
+                    <th>3 water crest</th>
                 </tr>
             </tbody>
+            <tbody>
+                <tr>
+                    <th>4 fried pork</th>
+                    <th>5 steamed broccoli</th>
+                    <th>6 sunny side-up</th>
+                </tr>
+            </tbody>
+            <tbody>
+                <tr>
+                    <th>7 barbecue</th>
+                    <th>8 oatmeal</th>
+                    <th>9 banana sundae</th>
+                </tr>
+            </tbody>
+        </table>
+        <h3>Table B: Siblings</h3>
+        <table  width='300px' border='2pt'>
+            <tbody>
+                <tr>
+                    <th>1 Jhenil</th>
+                    <th>4 Pearly</th>
+                </tr>
+                <tr>
+                    <th>2 Jhevies</th>
+                    <th>5 Jhon</th>
+                </tr>
+                <tr>
+                    <th>3 Jhazel</th>
+                    <th>6 Jenny</th>
+                </tr>
+            </tbody>
+            <tbody></tbody>
+        </table>
+        <h3>Table C</h3>
+        <table width='300px' border='2pt'>
+            <thead>
+                <tr>
+                    <td colspan='3'align='center'bgcolor='lightblue'>My Weight in 6 days</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>a) 45kgs</td>
+                    <td>c) 47kgs</td>
+                    <td>e) 50kgs</td>    
+                </tr>
+                <tr>
+                    <td>b) 48kgs</td>
+                    <td>d) 49kgs</td>
+                    <td>f) 50kgs</td>
+                </tr>
+            </tbody>
+        </table>
+        <h3>Table D</h3>
+        <h4>Basis was missing the document of the exercise.</h4>
+        <h3>Table E</h3>
+        <table  width='300px' border='2pt'>
+            <tr>
+                <td rowspan='4'bgcolor='lightblue'>Birth Years</td>
+            </tr>
+            <tr>
+                <td>1998</td>
+                <td>2002</td>
+            </tr>
+            <tr>
+                <td>1999</td>
+                <td>2005</td>
+            </tr>
+            <tr>
+                <td>2000</td>
+                <td>2007</td>
+            </tr>
+        </table>
+        <h3>Table F</h3>
+        <table width='300px' border='2pt' cellpadding= '10px'>
+            <tr>
+                <td rowspan='4'bgcolor='lightblue'>My Sibling's Ages (Young to Old)</td>
+            </tr>
+            <tr>
+                <td>13 yrs old</td>
+                <td>20 yrs old</td>
+            </tr>
+            <tr>
+                <td>16 yrs old</td>
+                <td>21 yrs old</td>
+            </tr>
+            <tr>
+                <td>18 yrs old</td>
+                <td>22 yrs old</td>
+            </tr>
+        </table>
+        <h3>Table G</h3>
+        <table width='300px' border='2pt'cellspacing='20px'>
+            <tr>
+                <td rowspan='4'bgcolor='lightblue'>Dog Names</td>
+            </tr>
+            <tr>
+                <td>ash</td>
+                <td>dave</td>
+            </tr>
+            <tr>
+                <td>bolt</td>
+                <td>elly</td>
+            </tr>
+            <tr>
+                <td>cloud</td>
+                <td>fred</td>
+            </tr>
+        </table>
+        <h3>Table H</h3>
+        <table width='300px' border='2pt'>
+            <tr>
+                <td colspan='3'bgcolor='lightblue'>Positive Integers</td>
+                <td>one</td>
+                <td>two</td>
+            </tr>
+            <tr>
+                <td rowspan='3'>three</td>
+                <td>four</td>
+                <td>five</td>
+                <td>six</td>
+                <td>seven</td>
+            </tr>
+            <tr>
+                <td>eight</td>
+                <td colspan='2'>nine</td>
+                <td rowspan='2'>ten</td>
+            </tr>
+            <tr>
+                <td>eleven</td>
+                <td>twelve</td>
+                <td>thirteen</td>
+            </tr>
+            <tr>
+                <td>fourteen</td>
+                <td colspan='4'>fiftheen</td>
+            </tr>
         </table>
     </body>
 </html>
