--- a/site/FirstGrading/Exercise5.html
+++ b/site/FirstGrading/Exercise5.html
@@ -6,7 +6,7 @@
         <meta name="author" content="J.Villena" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
-    <body bgcolor='#515A5A'>
+    <body bgcolor='#F2F3F4'>
         <h3>Table A: My Favorite Foods</h3>
         <table width='300px' border='2pt'>
             <tbody>
