--- a/site/FirstGrading/Exercise5.html
+++ b/site/FirstGrading/Exercise5.html
@@ -8,7 +8,7 @@
     </head>
     <body bgcolor='#F2F3F4'>
         <h3>Table A: My Favorite Foods</h3>
-        <table width='300px' border='2pt'>
+        <table width='300px' border='2px'>
             <tbody>
                 <tr>
                     <th>1 sandwich</th>
@@ -32,7 +32,7 @@
             </tbody>
         </table>
         <h3>Table B: Siblings</h3>
-        <table  width='300px' border='2pt'>
+        <table  width='300px' border='2px'>
             <tbody>
                 <tr>
                     <th>1 Jhenil</th>
@@ -50,7 +50,7 @@
             <tbody></tbody>
         </table>
         <h3>Table C</h3>
-        <table width='300px' border='2pt'>
+        <table width='300px' border='2px'>
             <thead>
                 <tr>
                     <td colspan='3'align='center'bgcolor='lightblue'>My Weight in 6 days</td>
@@ -72,7 +72,7 @@
         <h3>Table D</h3>
         <h4>Basis was missing the document of the exercise.</h4>
         <h3>Table E</h3>
-        <table  width='300px' border='2pt'>
+        <table  width='300px' border='2px'>
             <tr>
                 <td rowspan='4'bgcolor='lightblue'>Birth Years</td>
             </tr>
@@ -90,7 +90,7 @@
             </tr>
         </table>
         <h3>Table F</h3>
-        <table width='300px' border='2pt' cellpadding= '10px'>
+        <table width='300px' border='2x' cellpadding= '10px'>
             <tr>
                 <td rowspan='4'bgcolor='lightblue'>My Sibling's Ages (Young to Old)</td>
             </tr>
@@ -108,7 +108,7 @@
             </tr>
         </table>
         <h3>Table G</h3>
-        <table width='300px' border='2pt'cellspacing='20px'>
+        <table width='300px' border='2px'cellspacing='20px'>
             <tr>
                 <td rowspan='4'bgcolor='lightblue'>Dog Names</td>
             </tr>
@@ -126,7 +126,7 @@
             </tr>
         </table>
         <h3>Table H</h3>
-        <table width='300px' border='2pt'>
+        <table width='300px' border='2px'>
             <tr>
                 <td colspan='3'bgcolor='lightblue'>Positive Integers</td>
                 <td>one</td>
