--- a/site/FirstGrading/Exercise6.html
+++ b/site/FirstGrading/Exercise6.html
@@ -4,18 +4,243 @@
         <meta charset="utf-8" />
         <meta name="author" content="J.Villena" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Div and Span Elements</title>
+        <title>Schedule</title>
     </head>
     <body>
-        <h1>Div and Span Elements</h1>
-        <div>*** DIV 1: Some content here *** </div>
-        <div>*** DIV 2: Following right after div 1 ***</div>
-
-        <span>*** SPAN 1: Following right after div 2***</span>
-        <div>
-            *** DIV 3: Following right after span 1
-                <span>*** SPAN 2: INSIDE div 3 ***</span>
-                Continue content of div 3 ***
-        </div>
+        <font face='Verdana' size='1pt'>
+            <center>
+                    <h3>
+                        <ul>
+                            <dd>2nd Semester Schedule</dd>
+                            <dd>Your Name</dd>
+                        </ul>
+                    </h3>
+    <table width='500px' border='2px'background="..\assets\imgs\30710-paper-background.jpg">
+        <thead>
+            <tr>
+                <caption>Course and Year Level</caption>
+            </tr>
+            <tr><!--Title Row-->
+                <th width='100px'>   </th>
+                <th width='100px'>MON</th>
+                <th width='100px'>TUE</th>
+                <th width='100px'>WED</th>
+                <th width='100px'>THU</th>
+                <th width='100px'>FRI</th>
+                <th width='100px'>SAT</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr><!--1st Row-->
+                <td>7:30</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--2nd Row-->
+                <td>8:00</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td rowspan='19' align='center'bgcolor='#F2D7D5'>NSTPRO 1 UB Gym</td>
+            </tr>
+            <tr><!--3rd Row-->
+                <td>8:30</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--4th Row-->
+                <td>9:00</td>
+                <td></td>
+                <td rowspan='4' align='center'bgcolor='#D7BDE2'>TRBSHT1 FAO1</td>
+                <td></td>
+                <td rowspan='4' align='center'bgcolor='#D7BDE2'>TRBSHT1 FAO1></td>
+                <td></td>
+            </tr>
+            <tr><!--5th Row-->
+                <td>9:30</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--6th Row-->
+                <td>10:00</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--7th Row-->
+                <td>10:30</td>
+                <td rowspan='2' align='center' bgcolor='#A9CCE3'>ITFNDS1 F309</td>
+                <td rowspan='2' align='center' bgcolor='#A9CCE3'>ITFNDS1 F309</td>
+                <td rowspan='2' align='center' bgcolor='#A9CCE3'>ITFNDS1 F309</td>
+            </tr>
+            <tr><!--8th Row-->
+                <td>11:00</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--9th Row-->
+                <td>11:30</td>
+                <td rowspan='3' align='center' bgcolor='#A3E4D7'>ITLAWS1 F306</td>
+                <td ></td>
+                <td rowspan='3' align='center' bgcolor='#A3E4D7'>ITLAWS1 F306</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--10th Row-->
+                <td>12:00</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--11th Row-->
+                <td>12:30</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--12th Row-->
+                <td>1:00</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--13th Row-->
+                <td>1:30</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--14th Row-->
+                <td>2:00</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--15th Row-->
+                <td>2:30</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--16th Row-->
+                <td>3:00</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--17th Row-->
+                <td>3:30</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--18th Row-->
+                <td>4:00</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--19th Row-->
+                <td>4:30</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--20th Row-->
+                <td>5:00</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--21th Row-->
+                <td>5:30</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--22th Row-->
+                <td>6:00</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--23th Row-->
+                <td>6:30</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--24th Row-->
+                <td>7:00</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--25th Row-->
+                <td>7:30</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr><!--26th Row-->
+                <td>8:00</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+     </table>
+            </center>
+        </font>
     </body>
 </html>
