--- a/site/FirstGrading/Exercise6.html
+++ b/site/FirstGrading/Exercise6.html
@@ -91,25 +91,17 @@
             <tr><!--9th Row-->
                 <td>11:30</td>
                 <td rowspan='3' align='center' bgcolor='#A3E4D7'>ITLAWS1 F306</td>
-                <td ></td>
+                <td rowspan='3' align='center' bgcolor='#D1F2EB'>COMPRG1 F217</td>
                 <td rowspan='3' align='center' bgcolor='#A3E4D7'>ITLAWS1 F306</td>
-                <td></td>
+                <td rowspan='3' align='center' bgcolor='#D1F2EB'>COMPRG1 F217</td>
                 <td></td>
             </tr>
             <tr><!--10th Row-->
                 <td>12:00</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
             </tr>
             <tr><!--11th Row-->
                 <td>12:30</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
                 <td></td>
             </tr>
             <tr><!--12th Row-->
@@ -123,16 +115,13 @@
             <tr><!--13th Row-->
                 <td>1:30</td>
                 <td></td>
+                <td rowspan='6' align='center' bgcolor='#F9E79F'>ITFNDL1 F111</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td rowspan='6' align='center' bgcolor='#F7F9F9'>OPSYSL1 F112</td>
+                <td rowspan='6' align='center' bgcolor='#85929E'>WEBDVT1 D303</td>
             </tr>
             <tr><!--14th Row-->
                 <td>2:00</td>
-                <td></td>
-                <td></td>
-                <td></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -140,15 +129,9 @@
                 <td>2:30</td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
             </tr>
             <tr><!--16th Row-->
                 <td>3:00</td>
-                <td></td>
-                <td></td>
-                <td></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -156,24 +139,18 @@
                 <td>3:30</td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
             </tr>
             <tr><!--18th Row-->
                 <td>4:00</td>
-                <td></td>
-                <td></td>
-                <td></td>
                 <td></td>
                 <td></td>
             </tr>
             <tr><!--19th Row-->
                 <td>4:30</td>
                 <td></td>
+                <td rowspan='7' align='center' bgcolor='#85929E'>WEBDVT1 D303</td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td rowspan='7' align='center' bgcolor='#D1F2EB'>COMPRG1 F217</td>
                 <td></td>
             </tr>
             <tr><!--20th Row-->
@@ -181,13 +158,9 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
             </tr>
             <tr><!--21th Row-->
                 <td>5:30</td>
-                <td></td>
-                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -199,13 +172,9 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
             </tr>
             <tr><!--23th Row-->
                 <td>6:30</td>
-                <td></td>
-                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -217,13 +186,9 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
             </tr>
             <tr><!--25th Row-->
                 <td>7:30</td>
-                <td></td>
-                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
