--- a/site/FirstGrading/Exam/index.html
+++ b/site/FirstGrading/Exam/index.html
@@ -7,16 +7,31 @@
         <title>Villena_FGExam</title>
     </head>
     <body>
-        <title size='20px' font='arial'>2021 Technology Trends</title>
+        <h1 size='20px' font='arial'>2021 Technology Trends</h1>
         <a href=""><img alt="AIML"src="" width= height></a>   
         <a href=""><img alt="TandT"src="" width= height></a> 
         <a href=""><img alt="elearn"src="" width= height></a>     
         <table>
             <tr>
                 <th>
-                    Artificial Intelligence and Machine Learning
+                    <ul>
+                        <li>Artificial Intelligence and Machine Learning</li>
+                        <h4>by: Sara Mason</h4>
+                        <h5></h5>
+                        <p></p>
+                        <li>Telehealth and telemedicine</li>
+                        <h4></h4>
+                        <h5></h5>
+                        <p></p>
+                        <li>Online eductaion and e-learning</li>
+                        <h4></h4>
+                        <h5></h5>
+                        <p></p>
+                    </ul>
                 </th>
-                <th></th>
+                <th>
+                    <video controls autoplay><source src="MachineLearning" type="video/mp4"></video>
+                </th>
             </tr>
         </table>
         <footer>
